Consistent Academy style, fix typos

--- a/ray-rllib/acm_recsys_tutorial_2022/00_intro_gym_and_rllib_optional.ipynb
+++ b/ray-rllib/acm_recsys_tutorial_2022/00_intro_gym_and_rllib_optional.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2a7b5b99-4640-4842-909f-c7c518d2bc4e",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "© 2019-2022, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../../images/AnyscaleAcademyLogo.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dd694552-e5f2-48f3-acb5-77b8660e4211",
    "metadata": {},
    "source": [
@@ -47,8 +59,6 @@
    "source": [
     "# Notebook 0. Optional - Introduction to the OpenAI Gym Environment and RLlib Algorithm top-level APIs\n",
     "\n",
-    "© 2019-2022, Anyscale. All Rights Reserved<br>\n",
-    "\n",
     "### Learning objectives\n",
     "In this this tutorial, you will learn:\n",
     " * [What is Reinforcement Learning (RL)?](#intro_rl)\n",
@@ -93,17 +103,18 @@
     "<br>\n",
     "<b>The math concept behind RL is a Markov Decision Process</b><br>\n",
     "\n",
-    "From the feedback loop, the sequence of States, Actions, Rewards <i>[S(0), A(0), R(1), S(1), A(1), ...]</i>, is a sequence of random variables.  \n",
+    "The sequence of States, Actions, Rewards <i>[S(0), A(0), R(1), S(1), A(1), ...]</i>, is a sequence of random variables.  \n",
     "> A sequence of random variables is a <b>stochastic process</b>.  \n",
     "\n",
-    "The environment is fully known if we can predict the probability of reward at time t, given all the previous states, actions, rewards.  Pr[R(t+1)=r<sub>t</sub> | A(t)=a<sub>t</sub>, S(t)=s<sub>t</sub>, A(t-1)=a<sub>t-1</sub>, ...S(0)=s<sub>0</sub>]\n",
-    "> <i>A stochastic process is a <b>Markov Decision Process</b> if the values at time t depend only on the values at time t-1</i>.  \n",
+    "The environment is fully known if we can predict the probability of a particular State at time t, given all the previous states and actions.  <i>Pr(S<sub>t+1</sub>=s<sub>t+1</sub> | A<sub>t</sub>=a<sub>t</sub>, S<sub>t</sub>=s<sub>t</sub>, A<sub>t-1</sub>=a<sub>t-1</sub>, ...S<sub>0</sub>=s<sub>0</sub>)</i>\n",
+    "> <i>A stochastic process is a <b>Markov Decision Process</b> if the values at time t depend only on the values at time t-1</i>.  That is: <br>\n",
+    "> > <i>Pr(S<sub>t+1</sub>=s<sub>t+1</sub> | A<sub>t</sub>=a<sub>t</sub>, S<sub>t</sub>=s<sub>t</sub>)</i>\n",
     "\n",
     "Markov Decision Processes (MDPs) can be solved computationally!  See the <a href=\"https://www.anyscale.com/blog/reinforcement-learning-with-deep-q-networks\">Anyscale tutorial blog</a> for an explanation of the <i>Bellman Equation</i>, which is a discretization of a Markov Decision Process, shown below.\n",
     "\n",
     "First, rewrite the MDP, expected reward, in terms of a Q function, where $\\gamma$ is a discount factor for future rewards.\n",
     "\n",
-    "> $Q_π(s,a) = E_π \\left[\\sum_{j=0}^T \\gamma^jr_{t+j+1}|S_t=s, A_t=a \\right]$\n",
+    "> $Q_π(s_t,a_t) = E_π \\left[\\sum_{j=0}^\\tau \\gamma^jr_{t+j+1}|S_t=s, A_t=a \\right]$\n",
     "\n",
     "<img src=\"./images/bellman_equation.png\" width=\"50%\" />\n",
     "\n",
