--- a/ray-rllib/acm_recsys_tutorial_2022/01_anyscale_acm_recsys_tutorial_dryrun_1_sol.ipynb
+++ b/ray-rllib/acm_recsys_tutorial_2022/01_anyscale_acm_recsys_tutorial_dryrun_1_sol.ipynb
@@ -4,26 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Outline of the notebook\n",
+    "© 2019-2022, Anyscale. All Rights Reserved\n",
     "\n",
-    "- [Defining a MDP for recommendation system using gym API](#recsys) (15 min)\n",
-    "- [Online RL - Bandits](#bandits) (15 min)\n",
-    "- [Online RL - DQN](#dqn) (15 min)\n",
-    "- [Break](#break) (5 min)\n",
-    "- [Offline RL](#offline-rl) - (15 min)\n",
-    "\n",
-    "- slides [Link](https://github.com/anyscale/academy/blob/main/ray-rllib/acm_recsys_tutorial_2022/slides/rllib_acm_recsys_2022_slides.pdf)"
+    "![Anyscale Academy](../../images/AnyscaleAcademyLogo.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a RecSys gym environement <a class=\"anchor\" id=\"recsys\"></a>\n",
+    "### Learning objectives\n",
+    "In this this tutorial, you will learn about:\n",
+    " * [Defining a MDP for recommendation system using gym API](#recsys) -15 min\n",
+    " * [Online RL - Bandits](#bandits) -15 min\n",
+    " * [Online RL - DQN](#dqn) -15 min\n",
+    " * [Break](#break) -5 min\n",
+    " * [Offline RL](#offline-rl) -15 min\n",
+    "\n",
+    "[Link to slides](https://github.com/anyscale/academy/blob/main/ray-rllib/acm_recsys_tutorial_2022/slides/rllib_acm_recsys_2022_slides.pdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating a RecSys gym environment <a class=\"anchor\" id=\"recsys\"></a>\n",
     "\n",
     "RL is usually a fit when it comes to sequential decision making problems. For example in recommendation systems, the particular items that our AI recommends could impact the interest profile of the users that it interacts with and as result, can have consequences on the next time-step that it is making a decision. This is in contrast to the passive prediction problems where the task is simply to predict the future and that prediction does not change the outcome.\n",
     "\n",
-    "To successfully train RL agents we usually need a good simulator that can approximate real-world behavior about what is going to happen if your agent takes certain actions. It is always recomended to start with an environement that can be used to emulate real-world behavior. \n",
+    "To successfully train RL agents we usually need a good simulator that can approximate real-world behavior about what is going to happen if your agent takes certain actions. It is always recomended to start with an environment that can be used to emulate real-world behavior. \n",
     "\n",
     "In this section, we will learn how to create and evaluate an exemplar RecSys environment using gym API. "
    ]
@@ -224,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The printed environement shows a hierarchy of wrappers around the main RecSim environment. Next we'll investigate the behavior of observation and action space. For more info on how the environement is actually implemented we refer you to the source code acompanied with this tutorial [link](https://github.com/anyscale/academy/blob/main/ray-rllib/acm_recsys_tutorial_2022/rllib_recsim/rllib_recsim.py). "
+    "The printed environment shows a hierarchy of wrappers around the main RecSim environment. Next we'll investigate the behavior of observation and action space. For more info on how the environment is actually implemented we refer you to the source code acompanied with this tutorial [link](https://github.com/anyscale/academy/blob/main/ray-rllib/acm_recsys_tutorial_2022/rllib_recsim/rllib_recsim.py). "
    ]
   },
   {
@@ -311,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now checkout environement's reward behavior. Let's see what happens if we always pick the sweetest item and plot the reward over time."
+    "Let's now checkout environment's reward behavior. Let's see what happens if we always pick the sweetest item and plot the reward over time."
    ]
   },
   {
@@ -602,7 +611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train a contextual bandit on the environement <a class=\"anchor\" id=\"bandits\"></a>\n",
+    "# Train a contextual bandit on the environment <a class=\"anchor\" id=\"bandits\"></a>\n",
     "\n",
     "Bandit is a classical algorithm used in RecSys that is known to optimize single-step objectives. **They maximize immediate engagement not accumulated engagement over the user session.**\n",
     "\n",
@@ -616,7 +625,7 @@
    "metadata": {},
    "source": [
     "In the config below we set a few settings:\n",
-    "- For the environement, we specify 20 candidates that are randomly re-sampled at each time-step.\n",
+    "- For the environment, we specify 20 candidates that are randomly re-sampled at each time-step.\n",
     "- We use the torch implementation of the algorithm in RLlib\n",
     "- For evaluation, we rollout 100 complete episodes at the end of each training iteration and compute the average of un-discounted reward over the episode\n"
    ]
@@ -4399,7 +4408,7 @@
     "    )\n",
     "```\n",
     "\n",
-    "- The environement is not passed to the enviornement anymore. Instead we need to pass in the expected action and observation space to construct the policies. We can create them manually based on our knowledge of our system. In this case we actually cheat and use the environement attributes to get the correct action and observatin spaces.\n",
+    "- The environment is not passed to the enviornement anymore. Instead we need to pass in the expected action and observation space to construct the policies. We can create them manually based on our knowledge of our system. In this case we actually cheat and use the environment attributes to get the correct action and observatin spaces.\n",
     "\n",
     "```python \n",
     "    .environment(\n",
@@ -4408,7 +4417,7 @@
     "    )\n",
     "```\n",
     "\n",
-    "- evaluation config: Since during the evaluation we still need to use the enviroenement simulations, we need to specify it explicitly here. RLlib by default will use the training settings during evaluation and to avoid that default behavior we need to explicitly specify the simulation environement configs. \n",
+    "- evaluation config: Since during the evaluation we still need to use the enviroenement simulations, we need to specify it explicitly here. RLlib by default will use the training settings during evaluation and to avoid that default behavior we need to explicitly specify the simulation environment configs. \n",
     "\n",
     "```python\n",
     "    .evaluation(\n",
@@ -5535,11 +5544,34 @@
     "    -  Since it doesn't explore freely it won't perform as good as an online RL method. \n",
     "    -  Its performance is bounded to the quality of the dataset.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Thank you!\n",
+    "\n",
+    "<a href=\"https://docs.google.com/forms/d/1pxsMIPMxTTd2HH6710UOApx_smPDPPO0fpVWYKzvOgI/edit\">Survey</a> - Let us know how useful you have found this tutorial.\n",
+    "\n",
+    "**We would love to connect with you!**\n",
+    "\n",
+    "**Twitter** - @anyscalecompute | @raydistributed <br>\n",
+    "<b><a href=\"https://github.com/ray-project/ray\">Github</a></b> - 😜 give us a star!<br>\n",
+    "<b><a href=\"https://www.ray.io/community\">Slack</a></b> - [+invitation link](https://docs.google.com/forms/d/e/1FAIpQLSfAcoiLCHOguOm8e7Jnn-JJdZaCxPGjgVCvFijHB5PLaQLeig/viewform)<br>\n",
+    "<b><a href=\"https://discuss.ray.io/\">Discuss</a></b> - searchable questions <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('ray')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
