Consistent Academy style, fix typos

--- a/ray-rllib/acm_recsys_tutorial_2022/02_anyscale_acm_recsys_tutorial_dryrun_2.ipynb
+++ b/ray-rllib/acm_recsys_tutorial_2022/02_anyscale_acm_recsys_tutorial_dryrun_2.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "© 2019-2022, Anyscale. All Rights Reserved\n",
+    "\n",
+    "![Anyscale Academy](../../images/AnyscaleAcademyLogo.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"./images/tutorial_overview.png\" width=\"70%\" />"
    ]
   },
@@ -11,15 +20,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Outline of the notebook\n",
+    "# Main Tutorial Notebook for RLlib ACM RecSys 2022\n",
     "\n",
-    "- [Defining a MDP for recommendation system using gym API](#recsys) (15 min)\n",
-    "- [Online RL - Bandits](#bandits) (15 min)\n",
-    "- [Online RL - DQN](#dqn) (15 min)\n",
-    "- [Break](#break) (5 min)\n",
-    "- [Offline RL](#offline-rl) - (15 min)\n",
+    "### Learning objectives\n",
+    "In this this tutorial, you will learn about:\n",
+    " * [Defining a MDP for recommendation system using gym API](#recsys) -15 min\n",
+    " * [Online RL - Bandits](#bandits) -15 min\n",
+    " * [Online RL - DQN](#dqn) -15 min\n",
+    " * [Break](#break) -5 min\n",
+    " * [Offline RL](#offline-rl) -15 min\n",
     "\n",
-    "- slides [Link](https://github.com/anyscale/academy/blob/main/ray-rllib/acm_recsys_tutorial_2022/slides/rllib_acm_recsys_2022_slides.pdf)"
+    "[Link to slides](https://github.com/anyscale/academy/blob/main/ray-rllib/acm_recsys_tutorial_2022/slides/rllib_acm_recsys_2022_slides.pdf)"
    ]
   },
   {
@@ -332,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now checkout environement's reward behavior. Let's see what happens if we always pick the sweetest item and plot the reward over time."
+    "Let's now checkout environment's reward behavior. Let's see what happens if we always pick the sweetest item and plot the reward over time."
    ]
   },
   {
@@ -2026,7 +2037,7 @@
     "    )\n",
     "```\n",
     "\n",
-    "- The environement is not passed to the enviornement anymore. Instead we need to pass in the expected action and observation space to construct the policies. We can create them manually based on our knowledge of our system. In this case we actually cheat and use the environement attributes to get the correct action and observatin spaces.\n",
+    "- The environment is not passed to the enviornement anymore. Instead we need to pass in the expected action and observation space to construct the policies. We can create them manually based on our knowledge of our system. In this case we actually cheat and use the environment attributes to get the correct action and observatin spaces.\n",
     "\n",
     "```python \n",
     "    .environment(\n",
@@ -2035,7 +2046,7 @@
     "    )\n",
     "```\n",
     "\n",
-    "- evaluation config: Since during the evaluation we still need to use the enviroenement simulations, we need to specify it explicitly here. RLlib by default will use the training settings during evaluation and to avoid that default behavior we need to explicitly specify the simulation environement configs. \n",
+    "- evaluation config: Since during the evaluation we still need to use the enviroenement simulations, we need to specify it explicitly here. RLlib by default will use the training settings during evaluation and to avoid that default behavior we need to explicitly specify the simulation environment configs. \n",
     "\n",
     "```python\n",
     "    .evaluation(\n",
@@ -2959,17 +2970,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What's next?\n",
-    "* Please take the [Survey](https://bit.ly/rlib_recsys_2022)\n",
-    "* Further readings:\n",
-    "    - 📖 [Ray summit tutorials on RLlib](https://github.com/anyscale/ray-summit-2022-training/tree/main/ray-rllib)\n",
-    "    - 👩‍ [RLlib Documentation](https://docs.ray.io/en/latest/rllib/index.html)\n",
+    "### References\n",
     "\n",
-    "* Ways to connect:\n",
-    "    - [Slack](https://www.ray.io/community)\n",
-    "    - [Github](https://github.com/ray-project/ray)\n",
-    "    - [Twitter](https://twitter.com/anyscalecompute)\n",
-    "    - [Discuss](https://discuss.ray.io/)\n"
+    "1. 📖 [Ray summit tutorials on RLlib](https://github.com/anyscale/ray-summit-2022-training/tree/main/ray-rllib)\n",
+    "2. 👩‍ [RLlib Documentation](https://docs.ray.io/en/latest/rllib/index.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Thank you!\n",
+    "\n",
+    "<a href=\"https://docs.google.com/forms/d/1pxsMIPMxTTd2HH6710UOApx_smPDPPO0fpVWYKzvOgI/edit\">Survey</a> - Please let us know how useful you have found this tutorial.\n",
+    "\n",
+    "**We would love to connect with you!**\n",
+    "\n",
+    "**Twitter** - @anyscalecompute | @raydistributed <br>\n",
+    "<b><a href=\"https://github.com/ray-project/ray\">Github</a></b> - 😜 give us a star!<br>\n",
+    "<b><a href=\"https://www.ray.io/community\">Slack</a></b> - [+invitation link](https://docs.google.com/forms/d/e/1FAIpQLSfAcoiLCHOguOm8e7Jnn-JJdZaCxPGjgVCvFijHB5PLaQLeig/viewform)<br>\n",
+    "<b><a href=\"https://discuss.ray.io/\">Discuss</a></b> - searchable questions <br>"
    ]
   }
  ],
@@ -2989,7 +3009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
