Consistent Academy style, fix typos

--- a/ray-rllib/acm_recsys_tutorial_2022/00_anyscale_acm_recsys_tutorial_table_of_contents.ipynb
+++ b/ray-rllib/acm_recsys_tutorial_2022/00_anyscale_acm_recsys_tutorial_table_of_contents.ipynb
@@ -15,7 +15,7 @@
     "## About This Tutorial\n",
     "\n",
     "\n",
-    "See the instructions in the [README](README.md) tutorial overview and setting up your environment to use this tutorial if you want to run this on your laptop.\n",
+    "See the instructions in the [README](README.md) overview on setting up your environment to use this tutorial if you want to run this on your laptop.\n",
     "\n",
     "If you are using Anyscale hosted enviroment for this class, then you do not have to do anything!\n"
    ]
@@ -27,7 +27,7 @@
    "source": [
     "|     | Lesson | Description |\n",
     "| :-- | :----- | :---------- |\n",
-    "|     | **Homework** | Suggested if you are a beginner to RL |\n",
+    "|     | **Homework** | Suggested **only** if you are a beginner to RL and RLlib |\n",
     "| 01  | [Intro to RL, RLlib and Gym Environment APIs](01_intro_gym_and_rllib_optional.ipynb) | Introduction to Reinforcement Learning, RLlib, and the OpenAI Gym Env APIs |\n",
     "|     | **Main Notebook** |\n",
     "| 02  | [Create your RL RecSys Environment and Online RL Algorithm](02_anyscale_acm_recsys_tutorial_dryrun_2.ipynb) | Online RL bandits, DQN |\n",
