Consistent Academy style, fix typos

--- a/ray-rllib/acm_recsys_tutorial_2022/00_anyscale_acm_recsys_tutorial_table_of_contents.ipynb
+++ b/ray-rllib/acm_recsys_tutorial_2022/00_anyscale_acm_recsys_tutorial_table_of_contents.ipynb
@@ -15,7 +15,7 @@
     "## About This Tutorial\n",
     "\n",
     "\n",
-    "See the instructions in the [README](README.md) overview on setting up your environment to use this tutorial if you want to run this on your laptop.\n",
+    "See the instructions in the [README](README.md) overview for setting up your environment to use this tutorial if you want to run this on your laptop.\n",
     "\n",
     "If you are using Anyscale hosted enviroment for this class, then you do not have to do anything!\n"
    ]
