Rename notebooks, update TOC

--- a/ray-rllib/acm_recsys_tutorial_2022/00_anyscale_acm_recsys_tutorial_table_of_contents.ipynb
+++ b/ray-rllib/acm_recsys_tutorial_2022/00_anyscale_acm_recsys_tutorial_table_of_contents.ipynb
@@ -30,9 +30,7 @@
     "|     | **Homework** | Suggested **only** if you are a beginner to RL and RLlib |\n",
     "| 01  | [Intro to RL, RLlib and Gym Environment APIs](01_intro_gym_and_rllib_optional.ipynb) | Introduction to Reinforcement Learning, RLlib, and the OpenAI Gym Env APIs |\n",
     "|     | **Main Notebook** |\n",
-    "| 02  | [Create your RL RecSys Environment and Online RL Algorithm](02_anyscale_acm_recsys_tutorial_dryrun_2.ipynb) | Online RL bandits, DQN |\n",
-    "|     | **BREAK -5min** |\n",
-    "| 03  | [Train using possibly data from traditional ML fed into Offline RL Algorithm](02_anyscale_acm_recsys_tutorial_dryrun_2.ipynb#offline-rl) | Offline RL |\n",
+    "| 02  | [Create your RL RecSys Environment, Train Online RL, Offline RL Algorithms](02_anyscale_acm_recsys_tutorial.ipynb) | RecSys Env, Online RL Bandits and DQN, and Offline RL |\n",
     "\n",
     "<br>\n"
    ]
