removed todo code
Signed-off-by: Kourosh Hakhamaneshi <kourosh@anyscale.com>

--- a/ray-rllib/acm_recsys_tutorial_2022/02_anyscale_acm_recsys_tutorial.ipynb
+++ b/ray-rllib/acm_recsys_tutorial_2022/02_anyscale_acm_recsys_tutorial.ipynb
@@ -931,16 +931,7 @@
     "    tuner.fit()\n",
     "\"\"\"\n",
     "# TODO: Code here\n",
-    "tuner = tune.Tuner(\n",
-    "    DQN,\n",
-    "    param_space=bandit_config.to_dict(),\n",
-    "    run_config=air.RunConfig(\n",
-    "        local_dir='./rllib_notebook/offline_rl/bandits',\n",
-    "        stop={'training_iteration': 1}\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "result_bandit = tuner.fit()"
+    "result_bandit = None"
    ]
   },
   {
