--- a/ray-rllib/odsc_west_workshop_2022/anyscale_recsys_tutorial.ipynb
+++ b/ray-rllib/odsc_west_workshop_2022/anyscale_recsys_tutorial.ipynb
@@ -616,10 +616,10 @@
     "    param_space=bandit_config_offline.to_dict(),\n",
     "    run_config=air.RunConfig(\n",
     "        local_dir=\"./results_notebook/offline_bandits/\",\n",
-    "        stop={\"training_iteration\": 1000},\n",
+    "        stop={\"training_iteration\": 30},\n",
     "    )\n",
     ")\n",
-    "offline_bandit_results = bandit_tuner.fit()"
+    "offline_bandits_results = bandit_tuner.fit()"
    ]
   },
   {
