Fix survey link

--- a/ray-rllib/odsc_west_workshop_2022/anyscale_recsys_tutorial.ipynb
+++ b/ray-rllib/odsc_west_workshop_2022/anyscale_recsys_tutorial.ipynb
@@ -764,7 +764,7 @@
    "source": [
     "## Thank you!\n",
     "\n",
-    "<a href=\"https://docs.google.com/forms/d/1pxsMIPMxTTd2HH6710UOApx_smPDPPO0fpVWYKzvOgI/edit\">Survey</a> - Please let us know how useful you have found this tutorial.\n",
+    "<a href=\"https://bit.ly/rllib_odsc_west_survey\">Survey</a> - Please let us know how useful you have found this workshop.\n",
     "\n",
     "**We would love to connect with you!**\n",
     "\n",
